--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -15,97 +15,95 @@
 
     <!-- Wrapper -->
 
-    <div id="bloc_page">
+    <div id="bloc__page">
 
         <!-- Header -->
 
         <header>
-            <div class="menus_header">
+            <div class="menus__header">
                 <div class="back__arrow">
                     <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
                 </div>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
-                        class="img_logo" />
+                <div class="main__logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img__logo" />
                 </div>
             </div>
         </header>
 
         <!-- Section - Menus -->
 
-        <section class="menus_section">
-            <div class="main_img"><img
+        <section class="main">
+            <div class="main__img"><img
                     src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                    alt="Le délice des sens" class="img_restaurant" /></div>
-            <div class="menus_command">
-                <div class="menus_title">
+                    alt="Le délice des sens" class="img__restaurant" /></div>
+            <div class="main__menu">
+                <div class="menu__title">
                     <h1>Le délice des sens</h1>
                     <div class="fill__heart">
-                        <i class="far fa-heart logo_heart"></i>
+                        <i class="far fa-heart logo__heart"></i>
                     </div>
                 </div>
-                <div class="main_menu">
-                    <div class="entrees">
+                <div class="full__menu">
+                    <div class="starter">
                         <h2>ENTREES</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Tartare de thon</h3>
-                                    <p>Assaisonné au yuzu<span>25€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Tartare de thon</h3>
+                                <div class="last__line">
+                                    <p>Assaisonné au yuzu</p><span>25€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Bouchée de homard croustillant </h3>
-                                    <p>Et sa farandole de petits légumes<span>35€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Bouchée de homard croustillant </h3>
+                                <div class="last__line">
+                                    <p>Et sa farandole de petits légumes</p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <div class="description">
-                                        <h3>Velouté de cèpes </h3>
-                                        <p>Aux truffes<span>20€</span></p>
-                                    </div>
+                            <div class="meal meal__3">
+                                <h3>Velouté de cèpes </h3>
+                                <div class="last__line">
+                                    <p>Aux truffes</p><span>20€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="main_dish">
+                    <div class="main__dish">
                         <h2>PLATS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Poulet rôti aux herbes de Provence </h3>
-                                    <p>Et sa crème de truffe<span>40€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Poulet rôti aux herbes de Provence </h3>
+                                <div class="last__line">
+                                    <p>Et sa crème de truffe</p><span>40€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Langouste rôtie </h3>
-                                    <p>Et ses légumes de saison<span>35€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Langouste rôtie </h3>
+                                <div class="last__line">
+                                    <p>Et ses légumes de saison</p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Côte de boeuf Angus</h3>
-                                    <p>Et sa purée de panais<span>44€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Côte de boeuf Angus</h3>
+                                <div class="last__line">
+                                    <p>Et sa purée de panais</p><span>44€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
@@ -113,48 +111,49 @@
                     <div class="desserts">
                         <h2>DESSERTS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Farandole de desserts</h3>
-                                    <p>Du chef<span>18€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Farandole de desserts</h3>
+                                <div class="last__line">
+                                    <p>Du chef</p>
+                                    <span>18€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Crème brulée</h3>
-                                    <p>Revisitée<span>22€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Crème brulée</h3>
+                                <div class="last__line">
+                                    <p>Revisitée</p>
+                                    <span>22€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
-
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Tiramisu</h3>
-                                    <p>À la noisette<span>23€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Tiramisu</h3>
+                                <div class="last__line">
+                                    <p>À la noisette</p>
+                                    <span>23€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="command_btn">
-                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                <div class="command__btn">
+                    <button class="main__btn main__btn-modifier" type="button">Commander</button>
                 </div>
-            </div>
         </section>
 
         <!-- Footer -->
         <footer>
-            <div class="block_footer">
+            <div class="block__footer">
                 <h3>ohmyfood</h3>
-                <div class="add_restaurant">
+                <div class="add__restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
                 </div>
