--- a/pages/a_la_française.html
+++ b/pages/a_la_française.html
@@ -15,96 +15,100 @@
 
     <!-- Wrapper -->
 
-    <div id="bloc_page">
+    <div id="bloc__page">
 
         <!-- Header -->
 
         <header>
-            <div class="menus_header">
+            <div class="menus__header">
                 <div class="back__arrow">
                     <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
                 </div>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
-                        class="img_logo" />
+                <div class="main__logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img__logo" />
                 </div>
             </div>
         </header>
 
         <!-- Section - Menus -->
 
-        <section class="menus_section">
-            <div class="main_img"><img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        <section class="main">
+            <div class="main__img"><img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                     alt="A la française" class="img_restaurant" /></div>
-            <div class="menus_command">
-                <div class="menus_title">
+            <div class="main__menu">
+                <div class="menu__title">
                     <h1>A la française</h1>
                     <div class="fill__heart">
-                        <i class="far fa-heart logo_heart"></i>
+                        <i class="far fa-heart logo__heart"></i>
                     </div>
                 </div>
-                <div class="main_menu">
-                    <div class="entrees">
+                <div class="full__menu">
+                    <div class="starter">
                         <h2>ENTREES</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Tartare de poulpe acidulé</h3>
-                                    <p>Aux zestes d'orange<span>25€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Tartare de poulpe acidulé</h3>
+                                <div class="last__line">
+                                    <p>Aux zestes d'orange</p><span>25€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Velouté de légumes d'antan</h3>
-                                    <p>Carotte, panais, topinambour<span>35€</span></p>
+                            <div class="meal meal__2">
+
+                                <h3>Velouté de légumes d'antan</h3>
+                                <div class="last__line">
+                                    <p>Carotte, panais, topinambour</p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <div class="description">
-                                        <h3>Soupe à l'oignon</h3>
-                                        <p>Revisitée<span>20€</span></p>
-                                    </div>
+                            <div class="meal meal__3">
+
+
+                                <h3>Soupe à l'oignon</h3>
+                                <div class="last__line">
+                                    <p>Revisitée</p><span>20€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="main_dish">
+                    <div class="main__dish">
                         <h2>PLATS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Coquilles Saint-Jacques</h3>
-                                    <p>Accompagnées d'une purée de panais<span>40€</span></p>
+                            <div class="meal meal__1">
+
+                                <h3>Coquilles Saint-Jacques</h3>
+                                <div class="last__line">
+                                    <p>Accompagnées d'une purée de panais</p><span>40€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Magret de canard</h3>
-                                    <p>Et parmentier de pommes de terre<span>35€</span></p>
+                            <div class="meal meal__2">
+
+                                <h3>Magret de canard</h3>
+                                <div class="last__line">
+                                    <p>Et parmentier de pommes de terre</p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                    <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                            <div class="meal meal__3">
+
+                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                <div class="last__line">
+                                    <p>Sur son lit de gnocchis aux légumes</p><span>44€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
@@ -112,48 +116,48 @@
                     <div class="desserts">
                         <h2>DESSERTS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Pétales de violettes glacés</h3>
-                                    <p>Et purée de noisettes<span>18€</span></p>
+                            <div class="meal meal__1">
+
+                                <h3>Pétales de violettes glacés</h3>
+                                <div class="last__line">
+                                    <p>Et purée de noisettes</p><span>18€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Fondant au chocolat</h3>
-                                    <p>Revisité<span>22€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Fondant au chocolat</h3>
+                                <div class="last__line">
+                                    <p>Revisité</p><span>22€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
 
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Millefeuille croustillant</h3>
-                                    <p>Myrtilles et pâte d’amande<span>23€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Millefeuille croustillant</h3>
+                                <div class="last__line">
+                                    <p>Myrtilles et pâte d’amande</p><span>23€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="command_btn">
-                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                <div class="command__btn">
+                    <button class="main__btn main__btn-modifier" type="button">Commander</button>
                 </div>
-            </div>
         </section>
 
         <!-- Footer -->
         <footer>
-            <div class="block_footer">
+            <div class="block__footer">
                 <h3>ohmyfood</h3>
-                <div class="add_restaurant">
+                <div class="add__restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
                 </div>
