--- a/pages/la_note_enchantée.html
+++ b/pages/la_note_enchantée.html
@@ -15,107 +15,106 @@
 
     <!-- Wrapper -->
 
-    <div id="bloc_page">
+    <div id="bloc__page">
 
         <!-- Header -->
 
         <header>
-            <div class="menus_header">
+            <div class="menus__header">
                 <div class="back__arrow">
                     <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
                 </div>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
-                        class="img_logo" />
+                <div class="main__logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img__logo" />
                 </div>
             </div>
         </header>
 
         <!-- Section - Menus -->
 
-        <section class="menus_section">
-            <div class="main_img"><img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        <section class="main">
+            <div class="main__img"><img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                     alt="La note enchantée" class="img_restaurant" /></div>
-            <div class="menus_command">
-                <div class="menus_title">
+            <div class="main__menu">
+                <div class="menu__title">
                     <h1>La note enchantée</h1>
                     <div class="fill__heart">
-                        <i class="far fa-heart logo_heart"></i>
+                        <i class="far fa-heart logo__heart"></i>
                     </div>
                 </div>
-                <div class="main_menu">
-                    <div class="entrees">
+                <div class="full__menu">
+                    <div class="starter">
                         <h2>ENTREES</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Ravioles de foie gras </h3>
-                                    <p>Accompagnés de leur crème à la truffe <span>25€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Ravioles de foie gras </h3>
+                                <div class="last__line">
+                                    <p>Accompagnés de leur crème à la truffe</p><span>25€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Caviar osciètre </h3>
-                                    <p>Sur blini à la farine de blé noir <span>35€</span></p>
+                            <div class="meal meal__2">
+
+                                <h3>Caviar osciètre </h3>
+                                <div class="last__line">
+                                    <p>Sur blini à la farine de blé noir </p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <div class="description">
-                                        <h3>Homard et espuma de potiron </h3>
-                                        <p>Mariné aux zestes d'orange <span>20€</span></p>
-                                    </div>
+                            <div class="meal meal__3">
+                                <h3>Homard et espuma de potiron </h3>
+                                <div class="last__line">
+                                    <p>Mariné aux zestes d'orange </p><span>20€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_4">
-                                <div class="description">
-                                    <div class="description">
-                                        <h3>Foie gras de canard cuit entier </h3>
-                                        <p>Confiture de figue et pain toasté <span>35€</span></p>
-                                    </div>
+                            <div class="meal meal__4">
+                                <h3>Foie gras de canard cuit entier </h3>
+                                <div class="last__line">
+                                    <p>Confiture de figue et pain toasté </p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="main_dish">
+                    <div class="main__dish">
                         <h2>PLATS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Noix de coquilles Saint-Jacques </h3>
-                                    <p>Sur lit de purée de céleri-rave <span>40€</span></p>
+                            <div class="meal meal__1">
+
+                                <h3>Noix de coquilles Saint-Jacques </h3>
+                                <div class="last__line">
+                                    <p>Sur lit de purée de céleri-rave </p><span>40€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Langoustine poêlée </h3>
-                                    <p>Purée de patate douce <span>35€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Langoustine poêlée </h3>
+                                <div class="last__line">
+                                    <p>Purée de patate douce </p><span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Mijoté de queue de boeuf </h3>
-                                    <p>Et riz sauvage aux zestes de citron <span>44€</span></p>
+                            <div class="meal meal__3">
+
+                                <h3>Mijoté de queue de boeuf </h3>
+                                <div class="last__line">
+                                    <p>Et riz sauvage aux zestes de citron </p><span>44€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
@@ -123,48 +122,47 @@
                     <div class="desserts">
                         <h2>DESSERTS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Farandole de desserts</h3>
-                                    <p>Glace au caramel brun et sel de Guérande <span>18€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Farandole de desserts</h3>
+                                <div class="last__line">
+                                    <p>Glace au caramel brun et sel de Guérande </p><span>18€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Baba au rhum revisité</h3>
-                                    <p>Avec son coulis de citron<span>22€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Baba au rhum revisité</h3>
+                                <div class="last__line">
+                                    <p>Avec son coulis de citron</p><span>22€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
 
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Tarte au citron meringuée</h3>
-                                    <p>Déstructurée<span>23€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Tarte au citron meringuée</h3>
+                                <div class="last__line">
+                                    <p>Déstructurée</p><span>23€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="command_btn">
-                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                <div class="command__btn">
+                    <button class="main__btn main__btn-modifier" type="button">Commander</button>
                 </div>
-            </div>
         </section>
 
         <!-- Footer -->
         <footer>
-            <div class="block_footer">
+            <div class="block__footer">
                 <h3>ohmyfood</h3>
-                <div class="add_restaurant">
+                <div class="add__restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
                 </div>
