--- a/pages/la_palette_du_goût.html
+++ b/pages/la_palette_du_goût.html
@@ -15,100 +15,100 @@
 
     <!-- Wrapper -->
 
-    <div id="bloc_page">
+    <div id="bloc__page">
 
         <!-- Header -->
 
         <header>
-            <div class="menus_header">
+            <div class="menus__header">
                 <div class="back__arrow">
                     <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
                 </div>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
-                        class="img_logo" />
+                <div class="main__logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img__logo" />
                 </div>
             </div>
         </header>
 
         <!-- Section - Menus -->
 
-        <section class="menus_section">
-            <div class="main_img"><img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        <section class="main">
+            <div class="main__img"><img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                     alt="La palette du goût" class="img_restaurant" /></div>
-            <div class="menus_command">
-                <div class="menus_title">
+            <div class="main__menu">
+                <div class="menu__title">
                     <h1>La palette du goût</h1>
                     <div class="fill__heart">
-                        <i class="far fa-heart logo_heart"></i>
+                        <i class="far fa-heart logo__heart"></i>
                     </div>
                 </div>
-                <div class="main_menu">
-                    <div class="entrees">
+                <div class="full__menu">
+                    <div class="starter">
                         <h2>ENTREES</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Fricassée d'escargot </h3>
-                                    <p>Au piment d'Espelette <span>25€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Fricassée d'escargot </h3>
+                                <div class="last__line">
+                                    <p>Au piment d'Espelette</p>
+                                    <span>25€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Foie gras de canard mi-cuit
-                                    </h3>
-                                    <p>Et ses copeaux de truffe noire <span>35€</span>
-                                    </p>
+                            <div class="meal meal__2">
+                                <h3>Foie gras de canard mi-cuit </h3>
+                                <div class="last__line">
+                                    <p>Et ses copeaux de truffe noire </p>
+                                    <span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <div class="description">
-                                        <h3>Oeuf au plat </h3>
-                                        <p>Assaisonné à la truffe sur lit de caviar <span>20€</span>
-                                        </p>
-                                    </div>
+                            <div class="meal meal__3">
+                                <h3>Oeuf au plat </h3>
+                                <div class="last__line">
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                    <span>20€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="main_dish">
+                    <div class="main__dish">
                         <h2>PLATS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Filet de boeuf aux herbes </h3>
-                                    <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Filet de boeuf aux herbes </h3>
+                                <div class="last__line">
+                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                    <span>40€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <span><i class="check fas fa-check-circle"></i></span>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Parmentier de queue de boeuf </h3>
-                                    <p>À la truffe noire sur sa purée de panais <span>35€</span>
-                                    </p>
+                            <div class="meal meal__2">
+                                <h3>Parmentier de queue de boeuf </h3>
+                                <div class="last__line">
+                                    <p>À la truffe noire sur sa purée de panais</p>
+                                    <span>35€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <span><i class="check fas fa-check-circle"></i></span>
                                 </div>
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Filet de turbot </h3>
-                                    <p>Aux agrumes <span>44€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Filet de turbot </h3>
+                                <div class="last__line">
+                                    <p>Aux agrumes</p>
+                                    <span>44€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
@@ -116,48 +116,50 @@
                     <div class="desserts">
                         <h2>DESSERTS</h2>
                         <div class="choices">
-                            <div class="meal_choice_1">
-                                <div class="description">
-                                    <h3>Paris-Brest </h3>
-                                    <p>Revisité<span>18€</span></p>
+                            <div class="meal meal__1">
+                                <h3>Paris-Brest </h3>
+                                <div class="last__line">
+                                    <p>Revisité</p>
+                                    <span>18€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
-                            <div class="meal_choice_2">
-                                <div class="description">
-                                    <h3>Macaron au chocolat d'exception </h3>
-                                    <p>Et glace à la vanille de Madagascar <span>22€</span></p>
+                            <div class="meal meal__2">
+                                <h3>Macaron au chocolat d'exception </h3>
+                                <div class="last__line">
+                                    <p>Et glace à la vanille de Madagascar </p>
+                                    <span>22€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
-
                             </div>
-                            <div class="meal_choice_3">
-                                <div class="description">
-                                    <h3>Mousse au chocolat </h3>
-                                    <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+                            <div class="meal meal__3">
+                                <h3>Mousse au chocolat </h3>
+                                <div class="last__line">
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                    <span>23€</span>
                                 </div>
                                 <div class="selected">
-                                    <i class="check fas fa-check"></i>
+                                    <i class="check fas fa-check-circle"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="command_btn">
-                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+
+                <div class="command__btn">
+                    <button class="main__btn main__btn-modifier" type="button">Commander</button>
                 </div>
-            </div>
         </section>
 
         <!-- Footer -->
         <footer>
-            <div class="block_footer">
+            <div class="block__footer">
                 <h3>ohmyfood</h3>
-                <div class="add_restaurant">
+                <div class="add__restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
                 </div>
