Correction du titre du site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/33080b6594.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="public/css/style.css">
-    <title>Pouet pouet</title>
+    <title>Ohmyfood</title>
 </head>
 
 <body>
