--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -157,7 +157,7 @@
                         <p>Devenir partenaire</p>
                     </div>
                     <p>Mentions légales</p>
-                    <div class="contact"><a href="mailto:votrenom@bidule.com">Contact</a></div>
+                    <div class="contact"><a href="mailto:contact@ohmyfood.fr">Contact</a></div>
                 </div>
             </footer>
         </div>
